--- a/style1.css
+++ b/style1.css
@@ -55,32 +55,38 @@ body {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
-  margin: 20px;
+  
   justify-content: center;
   align-content: center;
+  height: 330px;
   
 }
 .flex-child1{
+  height: 290px;
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
-  margin: 20px;
+  margin: 20px ;
   justify-content: flex-end;
   align-content: flex-end;
+  
 }
 .flex-child2{
+  height: 405px;
   display: flex;
-  gap: 20px;
+  
   flex-wrap: wrap;
-  margin: 20px;
+  margin: 20px ;
   justify-content: space-between;
 }
 .flex-child3 {
+  height: 405px;
   display: flex;
-  gap: 20px;
+  
   flex-wrap: wrap;
   margin: 20px;
   justify-content: space-around;
 }
+ 
  
 
